--- a/宏观经济/涛动周期论.md
+++ b/宏观经济/涛动周期论.md
@@ -6,20 +6,20 @@
 
 **人生发财靠康波：** 我们每个人的财富积累一定不要以为是你多有本事，财富积累完全来源于经济周期运动的阶段给你带来的机会。比如过去十年，中国暴富的典型是煤老板，原因在于天时给的大宗商品的牛市。
 
-一个人的一生中，你所能获得的机会，理论上只有三次，如果每一个机会都没有抓到，肯定你一生的财富就没有了。如果抓住其中一个机会，你就能够至少成为中产阶级。也就是说，我们人生的财富轨迹是有迹可循的。
+**一个人的一生中，你所能获得的机会，理论上只有三次，如果每一个机会都没有抓到，肯定你一生的财富就没有了。如果抓住其中一个机会，你就能够至少成为中产阶级。也就是说，我们人生的财富轨迹是有迹可循的。**
 
-**康德拉季耶夫周期：** 一个循环是60年，分为回升，繁荣，衰退，萧条。
+**康德拉季耶夫周期：** 一个循环是60年，分为**回升，繁荣，衰退，萧条。**
 
 - 2008年发生康德拉季耶夫周期衰退一次冲击，也就是次贷危机
 - 2015年发生二次冲击，股市暴跌，人民币贬值
 - 2017年三季度后，中国和美国的资产价格全线回落，2019年将出现最终低点。
 
-一个康波的运动是由技术创新推动的，
+一个康波的运动是由**技术创新**推动的，
 
-- 回升阶段：1982年开始回升，
-- 繁荣阶段：1991年到2004年，2008年之前是世界经济在本次康波的黄金阶段。
-- 衰退阶段：2004年到2015年，是本次康波的衰退期，衰退期虽然经济增长不怎么样，但是我们还能够从资产价格中获得很大的收益。
-- 萧条阶段：2015年之后应该进入全球康波的萧条阶段。**供给侧改革是全球进入萧条的标志。**每一次的萧条都是一次滞涨展开，滞涨之后就是消灭通胀的阶段。到2025年，都是第五次康波的萧条阶段
+- **回升阶段：**1982年开始回升，
+- **繁荣阶段：**1991年到2004年，2008年之前是世界经济在本次康波的黄金阶段。
+- **衰退阶段：**2004年到2015年，是本次康波的衰退期，衰退期虽然经济增长不怎么样，但是我们还能够从资产价格中获得很大的收益。
+- **萧条阶段：**2015年之后应该进入全球康波的萧条阶段。**供给侧改革是全球进入萧条的标志。**每一次的萧条都是一次滞涨展开，滞涨之后就是消灭通胀的阶段。**到2025年，都是第五次康波的萧条阶段**
 
 **人生的财富不是靠工资，而是靠你对于资产价格的投资**
 
@@ -31,17 +31,15 @@
 
 人生的财富主要分为以下几类：
 
-- 大宗商品： 在康波周期中，大宗商品是最暴利的行业。大宗商品的牛市是几十年出现一次。大宗商品牛市出现在康波周期的衰退阶段。
+- **大宗商品：** 在康波周期中，大宗商品是最暴利的行业。大宗商品的牛市是几十年出现一次。大宗商品牛市出现在康波周期的衰退阶段。
 
-- 房地产：房地产周期20年轮回一次，因为一个人的一生作为群体来讲会两次买房。第一次是结婚的时候，第二次是二次置业。中国本轮房地产周期1999年开启，分为三波：2000-2007，2009年，2013-2014。房地产周期循环20年，15年上升，5年下降。中美两国的房地产周期起点差十年。
-
-  人的一生中，房子是最核心的资产，房子至少一辈子搞两次。
+- **房地产：**房地产周期20年轮回一次，因为一个人的一生作为群体来讲会两次买房。第一次是结婚的时候，第二次是二次置业。中国本轮房地产周期1999年开启，分为三波：2000-2007，2009年，2013-2014。房地产周期循环20年，15年上升，5年下降。中美两国的房地产周期起点差十年。人的一生中，房子是最核心的资产，房子至少一辈子搞两次。
 
 - 股票：股票不是长周期问题，随时波动，无法明确。
 
-- 艺术市场：
+- 艺术市场：不做主要投资
 
-60年波动中会套着三个房地产周期，20年波动一次。一个房地产周期套着两个固定资产投资周期，10年波动一次。一个固定资产投资周期套着三个库存周期。所以人生就是一次康波，三次房地产周期，九次固定资产投资周期和十八次库存周期。
+60年波动中会套着三个**房地产周期**，20年波动一次。一个房地产周期套着两个**固定资产投资周期**，10年波动一次。一个固定资产投资周期套着三个**库存周期**。所以人生就是一次康波，三次房地产周期，九次固定资产投资周期和十八次库存周期。
 
 未来四年的情况：
 
@@ -50,9 +48,7 @@
 - 从宏观经济角度讲，2016将出现第三库存周期反弹。在一个中周期十年的波动中，每隔三年一次库存周期循环。
 - 2016-1019， 2016是最好的年份
 
-
-
-**库存周期：**库存周期是经济增长中的最小周期单位，它来源于投机。生活中中国的一个库存循环是这样的，从买进东西到厂价上产是6个月，重复两三次是一年半，再有一个下跌期，所以一个循环是三年的库存周期。
+**库存周期：**库存周期是经济增长中的最小周期单位，它来源于投机。生活中的一个库存循环是这样的，从买进东西到厂价上产是6个月，重复两三次是一年半，再有一个下跌期，所以一个循环是三年的库存周期。
 
 ### 2. 繁荣的起点：中国股市大繁荣时代来临
 
