--- a/趋势投资/1- 趋势追踪.md
+++ b/趋势投资/1- 趋势追踪.md
@@ -16,7 +16,7 @@
 - 在投资时，你应该有**足够的自信心**，你应该**自己做决策**，**不去听从别人的推荐**。你应该**有耐心**，等待有利时机的到来。
 - 股价大涨时你不介意追高，因为你知道买入的机会通常是当市场价格创新高的时候。相反的，当你意识到你做出了错误的决策时，你会立即离场。
 - 你应该把亏损作为学习的机会，这样才能进步。
-- 你应当把交易当做一项事业，把买入和卖出的交易记录下来
+- 你应当**把交易当做一项事业，把买入和卖出的交易记录下来**
 
 **投资者 or 交易者：** 
 
@@ -35,7 +35,7 @@
 **感性交易 vs 机械交易：**
 
 - **感性交易：**交易者基于自己对市场的了解，和对目前市场环境的看法，或若干其他因素，然后做出他们的买卖决策。这样的决策是主观的，可能会受制于行为的偏见。
-- 机械交易：以一套被**自动化的和客观设定的规则**为基础。交易者严格遵守这些交易原则，以便他们进出市场。
+- **机械交易：**以一套被**自动化的和客观设定的规则**为基础。交易者严格遵守这些交易原则，以便他们进出市场。
 
 **趋势追踪：永恒的投资策略：**
 
@@ -159,4 +159,62 @@
 
 
 ## 第十章 趋势跟踪交易系统
+
+成功的来源： 坚持，明晰， 勇气，信念。
+
+股票已经变得和商品期货很像， 上涨和下跌都是在有限幅度内的。 当然，当它下跌时，下跌的速度比上涨要快的多。
+
+趋势跟踪就是在风险与回报之间不断平衡的。如果你想获得丰厚的回报，就要承担更大的风险；如果你想要评价水平的收益，只需承担平均水平的风险。
+
+成功人士往往知道，风险虽然是需要避免的东西，但只要应对得当，它往往会带来很高的效益。风险是可以利用的一种优势，而不是非要避免的陷阱。
+
+待在安全区反而是危险的。人生最大的风险就是拒绝冒险。
+
+最佳的风险程度，是面对市场下跌，你能处理好自我情绪的同时，还能够获得最大收益的程度。
+
+最可悲的人是那种有强烈的欲望但惧怕风险的人，他们害怕风险，时刻都心怀恐惧；比起那些努力过但最终失败的人，或者一开始就从未渴望过的人，这类人是最可悲的。
+
+在任何竞争中，如果参与者是理性的，并且他们知道对手也是理性的，那就必然存在一种最佳策略。
+
+风险管理通过买卖来增加和减少风险。通常，良好的风险管理结合了以下几个要素：
+
+1. 梳理交易和风险管理的逻辑，直到他们可以用计算机代码表述为止
+2. 在回测过程中，需要考虑选股策略和分散化投资
+3. 进行回测和压力测试，判断交易参数的敏感性和最佳取值
+4. 各方就波动率和期望回报达成明确的协议
+5. 维护好投资人和管理人之间的关系
+6. 最重要的是，按照系统执行
+
+趋势追踪的5个问题：
+
+1. 系统如何确定买卖什么？
+2. 系统如何确定应该买卖多少？
+3. 系统如何确定何时买入卖出？
+4. 系统如何确定怎样止损？
+5. 系统如何确定何时兑现浮盈？
+
+关于个人的几个问题：
+
+- 我的天性是怎样的？我是否适合做交易
+- 我想赚多少钱
+- 我愿意为实现自己的目标付出什么努力？
+- 我的投资/交易经验有哪些？
+- 我有哪些可以利用的资源？
+- 我的优点和缺点是什么？
+
+重要的并不是你判断的对错，重要的是：你对的时候能赚多少，错的时候不会亏多少。
+
+当你建立的头寸获利时，只要行情向上上涨了一定的幅度，你就应该买入。
+
+在设计系统时， 不要过分贴合历史数据。市场是在趋势中发展的，但过去的结果并不意味着未来。如果你设计的交易规则完美的拟合了过去了历史数据，那么你将面临巨大的风险，因为在未来的不同情况下，你的交易系统将会失效。
+
+专注于短期利润的交易者通常会错过长期趋势，而往往利用长期趋势才能抓住最大的获利机会。因此，你需要等待，而这就需要你对自己的交易系统有绝对的信心。
+
+做出正确的预测与整体交易的成功没有多大关系。那些能够做出大量正确预测的人，他们会发现自己错过了最佳交易时机。
+
+
+
+## 第28章 大谎言
+
+
 
