--- a/趋势投资/雷公思想.md
+++ b/趋势投资/雷公思想.md
@@ -18,6 +18,70 @@
 - 短期，中期，长期进行空头排列
 - 杀跌导致市场负向乖离，此时可能发生趋势变化
 
+## MACD
+
+MACD: 表达移动平均线之间的聚散关系。一个均线与另一根均线之间的聚散关系。乖离率
+
+本质上， macd就是一个短线交易指标。
+
+- 一根快速移动平均线和一根慢速移动平均线之间的距离。它在研究趋势的强度，即乖离率
+- 乖离率与9天移动平均值的关系
+- 解决强度以及强度的变化。没有去关注趋势是怎么去变化的
+
+macd指标可以帮助我们研究均线的扩散和密集状态的。
+
+
+
+## 选股原则
+
+量化选股：通过指标选股
+
+买一个好生意：google，苹果之类的。 从标普500指数来选。找1-2家超级牛企，来回做
+
+**客观数据，市场规律**
+
+## EMA, SMA
+
+$$
+MAN = (t1+...+tN)/N \\
+EMAN = 2 * c / (N+1) +(N-1)/(N+1) * 昨天的指数收盘平均值
+$$
+
+
+
+MA： 简单移动平均
+
+EMA：指数移动平均值。 价在线上线向上，价在线下线向下。当前价权重最大。
+
+SEA： 算术移动平均线
+
+20,60,120
+
+## 初学者6大错误
+
+- 不要做短线
+- 在没有足够多的资本的时候，不要进行职业交易
+- 在自己的专业领域拿到第一桶金
+- 不做做空交易，做空很难赚钱
+- 不碰期权
+- 不做功课
+- 过于注重胜率，过于看重收益率。 注重的应该是**盈亏比**
+- 初学者注重收益率，高手注重**绝对收益**
+- 初学者比较急，没有耐心
+
+要有成熟的交易理念，有一个非常好的交易策略，对市场深刻的理解。
+
+投机者为市场提供了充足的流动性
+
+靠事实证明，让数据说话，让策略自动运行。
+
+如何成为顶尖交易者：
+
+- 客观中立，不管什么消息，不能带情绪进去。让数据说话，让事实说话，让你的策略帮你解决问题
+- 根据你的策略，根据你的模型来计算盈亏比
+- 根据你的事实，根据你的计算来进行行情的推演。设定前提，设定底线。最糟糕的场景，最理想的场景。
+- 等待机会。高手最强的素质是等、
+
 ## 如何选股：91法则
 
 - 标普500指数前十大权重股 = 20% 全美股票市值
