--- a/雷公的交易系统.md
+++ b/雷公的交易系统.md
@@ -4,21 +4,87 @@
 
 ## 观察系统
 
+趋势： 价格，成交量/额，时间，空间
 
+**绝大多数人赚的都是趋势的钱。** 时代红利。
 
+趋势变化：转折，开始，发展，极端，转折（斜率发生变化）
 
+等待斜率发生变化才会有更好的机会
 
+均线：
 
+- EMA：
+- MA：抵扣价原理，均线密集
+
+用MA 均线+抵扣价原理判断趋势什么时候拐头，用EMA均线判断这个拐头是否有效
+
+均线密集之后通常是一波大行情的开始。
+
+乖离率：股价偏离长期均线的距离
+
+均线密集的本质：市场短期中期长期的交易成本趋于一致
 
 ## 预警系统
 
-价格，成交额，时间，空间
+价格围绕成本波动
 
-趋势的发展：
+成本对价格有拖拽作用
+
+趋势一旦形成，很难发生改变，只要人性不变，趋势就不变
+
+研究的是市场平均成本和人性
+
+**MA均线的抵扣现象**
+
+趋势的本质就是市场成本的运动
+
+运用抵扣价原理预测均线的方向
+
+
+
+MA均线+抵扣价来预演趋势什么时候发生改变
+
+EMA均线来判断趋势改变的有效性
 
 
 
 ## 交易策略
+
+均线的拐头就意味着斜率发生了变化
+
+趋势的开始阶段
+
+趋势的发展阶段
+
+趋势的极端阶段
+
+两个关键的交易信号：
+
+1. 2B结构
+2. 下一级别的均线密集
+
+
+
+重点提示：
+
+1. 依据抵扣价原理得知：当前价高于20天前的收盘价（抵扣价），则会导致MA20均线向上运行
+2. 向下运行的抵扣价和向上运行的股价会使得均线加速上行
+3. 往往在大行情开始前的挖坑动作，也称为黎明前的黑暗，就是为了能够在行情逆转之初实现均线快速拐头，加速上行的均线对股价有助推作用。
+
+2B只能解决过度偏移之后的回归问题，或许运气好可以买在相对低点。而真正的大行情往往在均线密集之后发生
+
+
+
+## 价量时空：趋势的四大要素
+
+价格是市场的共识的结果，长期累积之后形成了市场平均交易成本。我们用移动平均线来直观化，从而使得交易有迹可循。
+
+成交量就是市场分歧。成交量和成交额不一样。
+
+分歧越大，未来行情的确定性就越强
+
+
 
 
 
