--- a/博客文章/我们距离房产税还有多远.md
+++ b/博客文章/我们距离房产税还有多远.md
@@ -24,21 +24,111 @@
 
 现在来看，房产税的全面出台估计都用不了5年，我国的城市化已经超过60%， 已经进入存量房时代。而进入存量房时代，新房的销售必然受到二手房交易的影响，那么我国目前解决的方式很简单：锁紧二手房流动性，逼着你去购买新房，你不买新房，房地产商拿地意愿就不强，这会导致地方政府地卖不出去，进而导致地方政府债务问题爆发。
 
-但是，二手房的流动性不能一直这么冻着，大家也都不是傻子， 新房一买不就变成了二手房，然后还给我冻结了，我要想置换怎么办？ 我要是投资住房怎么办？新房价格比二手房价格高很多，为啥我不借借钱买二手房去呢？
+但是，二手房的流动性不能一直这么冻着，大家也都不是傻子， 新房一买不就变成了二手房，然后还给我冻结了，我要想置换怎么办？ 我要是投资住房怎么办？如果新房价格比二手房价格高很多，为啥我不借钱买二手房去呢？
 
 因此，目前这种强制措施稳定土地出让金的方式并不可持久，后面必须要其他税种来补这个缺口，而这一税种只能是房产税，只会是房产税。 而最根本的原因在于，地方政府举债开发导致的地方政府债务真滴是必须得有这么多税收才行啊。
 
+## 房产税真滴能降房价吗？
 
+房产税能降房价本身就是一个大谎言，但我认为在我国部分城市的确可能由于房产税砸一个比较好的价值坑位。为什么这么说呢？我主要是从房地产周期和供求的角度来分析一下。
 
+我个人认为， 长期来看，影响房价的主要因素有三方面： 
 
+- **房地产周期：**根据涛动周期论，房地产大概是20年一个周期，15年上涨，5年下跌。我们处于什么时候呢？我认为我们已经处于下降周期中。但这部分单独来说又会有很多内容要讲，这里简单略过。
+- **供求关系：**其中，供给方面主要是由开发商和地方政府决定的，地方政府决定每年多少土地用于住宅用地，开发商决定到手的地什么时候交房。而需求方面又分为两大类：投机性需求和刚性需求，投机性需求主要与货币有关，而刚性需求一方面与货币有关，另一方面又跟人口周期息息相关。
+- **政府意图：**此处单独把政府拿出来主要是因为我国是大政府，一定程度上可以决定供求。这方面就不细说了，大家应该都有数。这里要区分的就是中央政府和地方政府，二者的意图并不一致，这方面的博弈非常有意思，后面会简单讲讲。
 
+从我的推论上来看， 房产税的推出并不会影响房地产周期，在短期内影响投机性需求，长期不影响，且不改变政府意图。房产税要想影响房价，需要改变市场的预期和供需关系，而这是由政府控制的，也就是说，根本还是看政府意图。
 
+从这三个方面来说的结论就是，房产税对于房价短期可以去除一定的投机性需求，对于部分城市砸下一个价值坑位，长期来看，主要还是跟着房地产周期，城市化进程产生的刚性需求，政府的根本意图而已。
 
+顺便一提的是，国外从来没有过房产税能降房价这一先例，难道我们又来一个特色？
 
+## 看清政府意图？
+
+看清政府意图是非常难的，只能从政府的文件中来推演得出自己的判断，这里我简单我是如何推演政府对待房地产的意图的，不一定对，只是我的推论罢了。
+
+首先，还是老办法，区分为中央政府和地方政府，二者的定位是不同的。
+
+- **中央政府：**中央政府的终极定位是维持稳定。不管是扶贫，橄榄型社会，计划生育，放开n胎，打击课外教育等等都是为了政权长期稳定的发展。
+- **地方政府：**地方政府的定位在过去20多年来说，可以归结为 “GDP”，一切向GDP看齐，只有经济搞得好，才能升官，这是导致地方政府大量举债的根本原因。至于说现在定位有没有变化， 我没有看到。
+
+那么对待房地产上，又存在非常有意思的情况了，中央政府的发言从来都是“房地产市场稳定平稳运行”， “房住不炒“等等言论；而地方政府的目的从来都是”向如何有效卖地前进“。根本原因在于土地出让金是地方政府为数不多的钱袋子，只有搞经济才能升职加薪迎娶白富美，那怎么办呢？只有卖地搞基建啊，全国上下努力搞基建，基建就是GDP呀，同志们。
+
+那么如今对于房地产的意图发生了变化吗？ 
+
+从中央规定土地集中拍卖看，依旧是稳字当先。以前的土地拍卖是地方政府自己规划，并且带有临时性，导致房地产商只能争相竞价，毕竟，价格高反正又不是他出钱，但是要是没地盖楼，企业就得破产，可不得玩命喊价吗？ 这也就是地王频出的原因了。但是现在玩不转了，在玩泡沫要破，居民要怨声载道了。
+
+从官员绩效考核看，依旧是升职加薪白富美。我是认为，如果绩效考核的方式不变，地方政府会紧紧的薅他为数不多的几个钱袋子，无论是土地出让金（现在难薅了），还是房产税，还是什么其他税种。
+
+## 为何在上海重庆试点十年之久？
+
+曾经的政府也是对房产税寄予众望，希望能起到一个很好的调节作用，做到稳中有升。因此， 在2011年起对房地产进行试点，结果很明显，啥都不是。 当然，肯定会有人说这次不一样，不管怎么说，我们先来看看上海和重庆怎么玩的。
+
+|          | 上海                                                         | 重庆                                                   |
+| -------- | ------------------------------------------------------------ | ------------------------------------------------------ |
+| 征税对象 | 自办法实施之日起的增量住房：本市居民的二套以上，非本市居民的首套 | 独栋商品住宅；新购高档住房；本市同时三无人群的二套以上 |
+| 税基     | 市场交易价格                                                 | 市场交易价格                                           |
+| 税率     | 0.4%-0.6%                                                    | 累进：0.5%-1%-1.2%                                     |
+| 税收减免 | 人均免征60平                                                 | 一个家庭一套免征                                       |
+| 征税机构 | 地方税务机关                                                 | 地方税务机关                                           |
+
+二者的相同点在于：
+
+- 征税重点以新增购房为主，同时，买高价房就要多交税
+- 实行差别化税率，上海有两档，重庆有三档，控制高档住房的比例
+- 较为宽松的免税政策，可以减少征税对居民基本住房需求影响
+
+二者不同点在于：
+
+- 征税目标不同，上海主要是抑制投资，重庆主要是抑制高档住房消费
+- 实施范围不同，上海全市推行，重庆仅覆盖主城九区
+- 征税对象不同，上海针对增量住房，重庆针对高端住房
+
+从上面我们可以看出主要有两个问题：
+
+1. 只针对增量房不针对存量房
+2. 税率偏低，即使是累进税率的顶格税率也偏低。无法打击投机需求。
+
+从结果上看，也非常明显，上海和重庆的房产税，既没有成为一个较为重要的地方财政支柱，又没有对投机性需求进行充分调控，实现房价稳中有升的局面，可以说是一次较为失败的试点，完全没有达到政府的预期。
+
+## 这次不一样？
+
+如今，房地产税又重新提上日程，回顾过去无论是国外美帝，日本，德国等国家还是国内香港，上海，重庆的房产税，无一例外对房价的长期走势没有产生任何影响。难道这次不一样？
+
+## 全面征收房产税真滴很难吗？
+
+答案很扎心， 是真滴很难。要想征收房产税，政府首先要摆平自己内部既得利益群体，做好利益均衡；其次，政府需要让人民群众房产税的好处，正如个人所得税的出台一样。
+
+### 第一道关卡： 全国房产联网
+
+有没有发现，在如今的信息社会，房产作为如此大的一个领域，居然没有做到联网，有没有觉得不可思议呢？为什么不联网呢？各位细品即可，可以联想下杭州下马官员，能做到自己砍自己一刀，不能吧。
+
+### 第二道关卡：存量税 vs 流量税
+
+要知道我国政府现在所征收的税大多数都是流量税，即在交易时候产生的税，如增值税，契税等。征收流量税和存量税根本不是一个难度的，流量税一般双方都有利可图可以忍受，但是存量税是侵犯到个人利益的，反弹必然是很大的。我们看宣传就好了，房产税的好处会慢慢的有各种媒体站台的。
+
+**其他的不说了**
+
+## 最后
+
+我的结论依旧如下：短期房产税打击投机性需求，造成部分城市黄金坑，长期不改变走势。 甚至说房产税税率不是累进税率，甚至说累进税率的最高税率都不超过3%（顶格税率）， 我觉得大家还是洗洗睡吧。就这样喽，说再多无益。
 
 ## Reference
 
 [1] 天涯 KK 大神言论
+
+[2] 城里的房子
+
+[3] 全球房地产
+
+[4] 房价的逻辑
+
+[5] 房地产周期
+
+
+
+
 
 
 
