--- a/宏观经济/涛动周期论.md
+++ b/宏观经济/涛动周期论.md
@@ -2,7 +2,7 @@
 
 ## 第一部分 涛动周期论
 
-### 1. 认识就是一场康波
+### 1. 人生就是一场康波 - 2016
 
 **人生发财靠康波：** 我们每个人的财富积累一定不要以为是你多有本事，财富积累完全来源于经济周期运动的阶段给你带来的机会。比如过去十年，中国暴富的典型是煤老板，原因在于天时给的大宗商品的牛市。
 
@@ -10,24 +10,29 @@
 
 **康德拉季耶夫周期：** 一个循环是60年，分为**回升，繁荣，衰退，萧条。**
 
+- 目前是从衰退到萧条的转换点，未来十年，注定在萧条中度过
 - 2008年发生康德拉季耶夫周期衰退一次冲击，也就是次贷危机
 - 2015年发生二次冲击，股市暴跌，人民币贬值
-- 2017年三季度后，中国和美国的资产价格全线回落，2019年将出现最终低点。
+- 2017年三季度后，中国和美国的资产价格全线回落，2019年将出现最终低点，这个低点要远比大家想象的低。
 
-一个康波的运动是由**技术创新**推动的，
+**一个康波的运动是由技术创新推动的：**
 
 - **回升阶段：**1982年开始回升，
-- **繁荣阶段：**1991年到2004年，2008年之前是世界经济在本次康波的黄金阶段。
+- **繁荣阶段：**1991年到2004年，美国信息技术的繁荣就是康波繁荣的标志，2008年之前是世界经济在本次康波的黄金阶段。
 - **衰退阶段：**2004年到2015年，是本次康波的衰退期，衰退期虽然经济增长不怎么样，但是我们还能够从资产价格中获得很大的收益。
 - **萧条阶段：**2015年之后应该进入全球康波的萧条阶段。**供给侧改革是全球进入萧条的标志。**每一次的萧条都是一次滞涨展开，滞涨之后就是消灭通胀的阶段。**到2025年，都是第五次康波的萧条阶段**
 
+当一个技术在追赶国的渗透程度达到无孔不入的时候，一定到达了它生命周期的最后阶段，这个技术后面就是一个成熟并衰落的趋势。
+
+第四次康波的萧条在一九七几年，第三次是一九二几年，康波理论描述了一套世界经济的长期运转的过程。
+
 **人生的财富不是靠工资，而是靠你对于资产价格的投资**
 
-在一个人60年的人生主要阶段中，其中30年参与经济生活，30年中康波给予你的财富机会只有三次，不以你的主观意志为转移，能够抓住一次，就能够成为中产阶级：
+在一个人60年的人生主要阶段中，其中30年参与经济生活，30年中康波给予你的财富机会只有**三次**，不以你的主观意志为转移，能够抓住一次，就能够成为中产阶级。最近的三次机会：
 
-- 第一次机会在2008年，那时候买股票，房子，你的人生是很成功的
-- 第二次机会在2019年
-- 最后一次在2030年附近
+- **第一次机会：**在2008年，那时候买股票，房子，你的人生是很成功的
+- **第二次机会：**在2019年
+- **最后一次：**在2030年附近
 
 人生的财富主要分为以下几类：
 
@@ -35,7 +40,7 @@
 
 - **房地产：**房地产周期20年轮回一次，因为一个人的一生作为群体来讲会两次买房。第一次是结婚的时候，第二次是二次置业。中国本轮房地产周期1999年开启，分为三波：2000-2007，2009年，2013-2014。房地产周期循环20年，15年上升，5年下降。中美两国的房地产周期起点差十年。人的一生中，房子是最核心的资产，房子至少一辈子搞两次。
 
-- 股票：股票不是长周期问题，随时波动，无法明确。
+- **股票：**股票不是长周期问题，随时波动，无法明确。
 
 - 艺术市场：不做主要投资
 
@@ -46,7 +51,9 @@
 - 从全球经济看，未来四年是从衰退到萧条的转化点，此时需要保证自己手中的流动性
 - 2015年世界经济最核心的矛盾是商品价格的下跌。2016最核心的机会在于商品价格要反弹，包括期货和股票中的资源股
 - 从宏观经济角度讲，2016将出现第三库存周期反弹。在一个中周期十年的波动中，每隔三年一次库存周期循环。
-- 2016-1019， 2016是最好的年份
+- 2016-2019这四年， 2016是最好的年景。
+
+人类社会任何的反转点的基本机制就是人的投机行为。
 
 **库存周期：**库存周期是经济增长中的最小周期单位，它来源于投机。生活中的一个库存循环是这样的，从买进东西到厂价上产是6个月，重复两三次是一年半，再有一个下跌期，所以一个循环是三年的库存周期。
 
@@ -77,7 +84,21 @@
 
 
 
+## 9. 人生发财靠康波-康波中的价格波动
 
+人生就是一次康波，康波的形成，是人的集体行为的结果，而这种集体行为决定于人的代际更迭。
+
+人生的财富由康波注定，因为康波的本质表现是价格的波动，而人生的财富积累根本还是来源于资产价格的投资或投机，人生发财必然是靠康波，康波就是人生的财富规划。
+
+康波划分：繁荣，衰退，萧条，回升，繁荣和衰退是康波的上升期，萧条和回升是康波的下降期。
+
+康波基本围绕着50-60年的周期循环。
+
+![](..\宏观经济\image\涛动周期论_1.png)
+
+
+
+康波的根本问题还是世界资源品价格的长期波动问题，资源品价格又包括商品属性和金融属性两方面。
 
 ## 第二部分：大类资产配置
 
