--- a/我想要什么样的生活.md
+++ b/我想要什么样的生活.md
@@ -10,7 +10,8 @@
 
 为了丰富自己的生活，向身边的朋友学习，我决定在2021年逐渐确定我自己30岁这段时间的人生规划，人生不止是读书，赚钱，还有其他很多东西，我有些认可她们的话了。 
 
- **此处留白，拭目以待**
+1. 学会玩乐：射箭，钢琴，台球
+2. 去找人生的伴侣
 
 
 
@@ -41,8 +42,6 @@
 30岁的我，希望有着腹肌，希望能够养成健身的习惯，希望能够健康成长。
 
 30岁的我，希望学会弹钢琴， 希望能学习系统的音乐。
-
-30岁的我，希望朋友在身边，或者在身边的能是朋友。
 
 30岁的我，希望有一辆车，不用太贵。
 
