--- a/房地产/KK 大神 2010 关于房地产高论.md
+++ b/房地产/KK 大神 2010 关于房地产高论.md
@@ -15,7 +15,7 @@
 
 ## 2. 这次调控的真实意图，防范金融风险
 
-辨别利益是看透一切事物真相的武器。
+**辨别利益是看透一切事物真相的武器。**
 
 纵观古今上位者最不能容忍的是别人受益，自己背黑锅
 
@@ -43,7 +43,7 @@
 
 房价为何在一个自由竞争的市场上能够持续上涨？ 因为稀缺性，土地的稀缺性。
 
-商品房的稀缺性是相对人民币而言的，人民币印多了，资金没地方去，商品房就涨价了。
+**商品房的稀缺性是相对人民币而言的，人民币印多了，资金没地方去，商品房就涨价了。**
 
 垄断还可以解决一个问题：社会稳定。
 
@@ -63,7 +63,7 @@
 
 只要是由贫富差距的社会，只要存在阶级，只要存在统治和被统治，这个社会就会不以人的意志为转移的出现大量的底层居民，没有这些底层居民。权贵就不能很好的生活。
 
-公租房要想租出好价格，有两个方式：
+**公租房要想租出好价格，有两个方式：**
 
 - 减少市场可出租房源，典型的如拆迁廉价城中村
 - 提高竞争房源的成本， 典型的如房产税
@@ -110,11 +110,11 @@
 
 ## 9. 民为何，官为何
 
-百姓就是牛羊
+**百姓就是牛羊**
 
 博古才能通今，不了解历史无法治理国家，不了解历史也无法对事务有一个清楚的认识。
 
-产权房屋价格的上涨牺牲的主体只是体制外部分都市白领的利益，换来的不过是网络上没完没了的牢骚和咒骂。
+**产权房屋价格的上涨牺牲的主体只是体制外部分都市白领的利益，换来的不过是网络上没完没了的牢骚和咒骂。**
 
 各个阶层的房子：
 
@@ -309,4 +309,20 @@
 
 
 ## 37. gdp 保8
+
+
+
+
+
+
+
+
+
+## 47. 中介的陷阱更厉害
+
+
+
+
+
+## 48 法币 = 白条
 
