--- a/趋势投资/雷公思想.md
+++ b/趋势投资/雷公思想.md
@@ -36,15 +36,15 @@ macd指标可以帮助我们研究均线的扩散和密集状态的。
 
 量化选股：通过指标选股
 
-买一个好生意：google，苹果之类的。 从标普500指数来选。找1-2家超级牛企，来回做
+买一个好生意：**google，苹果之类的。 从标普500指数来选。找1-2家超级牛企，来回做**
 
 **客观数据，市场规律**
 
 ## EMA, SMA
 
 $$
-MAN = (t1+...+tN)/N \\
-EMAN = 2 * c / (N+1) +(N-1)/(N+1) * 昨天的指数收盘平均值
+MA_N = (t1+...+tN)/N \\
+EMA_N = 2 * c / (N+1) +(N-1)/(N+1) * 昨天的指数收盘平均值
 $$
 
 
@@ -69,7 +69,7 @@ SEA： 算术移动平均线
 - 初学者注重收益率，高手注重**绝对收益**
 - 初学者比较急，没有耐心
 
-要有成熟的交易理念，有一个非常好的交易策略，对市场深刻的理解。
+**要有成熟的交易理念，有一个非常好的交易策略，对市场深刻的理解。**
 
 投机者为市场提供了充足的流动性
 
