--- a/雷公的交易系统.md
+++ b/雷公的交易系统.md
@@ -94,5 +94,38 @@ EMA均线来判断趋势改变的有效性
 
 ## 安全系统
 
+金融市场就是人性市场
+
+金融市场是人性的放大器
+
+价格围绕市场成本上下波动
+
+本方有利原则：每个人的买卖都是站在对自己是有利的方向上的。
+
+羊群效应：将人性中贪婪的部分放大
+
+人性之极才是做交易，做投资的最佳时机，除此之外大多数时间不适合做交易。
+
+大量：重大分歧
+
+长时间的震荡行情也是人性之极
+
+区间震荡行情的市场意义：让市场各个时期的交易成本趋于一致
+
+成功的投资者成功之关键在于他们的思考方式，而不是使用什么技术方法。
+
+索罗斯的反身性原理：
+
+- 看不见：散漫的意见
+- 看不起：散漫的偏见，主流的偏见
+- 看不懂：主流的共识
+- 来不及：全市场共识
+
+
+
+人性之极： 分歧->漠视->默许->共识->追随->亢奋（贪婪，恐惧）
+
+四大基本原则：大量，缺口，密集，乖离。
+
 
 
