--- a/生活学习/视频学习/男士形象管理.md
+++ b/生活学习/视频学习/男士形象管理.md
@@ -2,5 +2,74 @@
 
 ## 第一章 个人形象的价值
 
-高质量的人生 = 体力 + 智力 + 形象力
+第一时间映像（1-7秒）：
 
+- 55%外表形象： 服装，个人面貌，体型，发型
+- 38%行为外表：声音，手势，姿势，动作
+- 7%真才实学
+
+形象决定价值，一个良好的形象可以给你带来更多的机会。
+
+显性因素：色，态，型，音，材
+
+隐性因素：年龄，爱好，身份地位，居住地，职业，修养，场合，流行，性格，生活方式
+
+**高质量的人生 = 体力 + 智力 + 形象力**
+
+色彩：暖肤色，冷肤色
+
+个人自身风格：风格是整体形象美的个性最直接的体现。指一个人的内在修养，气质，思想，文化与外在长相，身体，神情，动作综合的结果。
+
+轮廓体型：人的体型又是其效果的载体，美化个人形体是形象设计的基本作用之一。服饰，发型，妆容是个人形象的外在形式，所以必须确定如何选择最合适自己形体轮廓的最好款式。
+
+发型：发型是整体形象设计的主点，是整体形象设计中最为重要的组成部分。发型设计必须与脸型，头型，举止，气质为依托进行设计，这样才符合整体形象的审美规范。
+
+着装常识：
+
+个人礼仪基本原则：
+
+- 三应原则：应事，应己，应制
+- 修饰避人原则：不可在他人面前毫无顾忌进行某些自我形象的维护，修饰动作，而应避开别人到幕后进行
+  - 不在他人面前整理衣服
+  - 不在他人面前做小动作
+  - 礼貌处理无法控制的修饰行为
+
+仪容：一般指人的容貌，包括发式，面容，脸色等状态。反映了一个人的精神面貌，朝气与活力，是传达给接触对象感官的最直接，最生动的第一信息。
+
+仪容美的基本要素：貌美，发美，肌肤美
+
+- 面部：
+- 眼睛：清洁，修眉，眼睛
+- 耳朵：卫生，耳毛
+- 鼻子：清洁，鼻毛
+- 嘴巴：护理，异响，胡须
+- 脖颈：清洁
+
+去除分泌物：
+
+- 眼角分泌物：
+- 鼻孔分泌物
+- 口部的多余物：口角周围沉积的唾沫，食物残渣和牙缝中的牙垢
+
+定时剃须：每天坚持剃一次胡须，绝对不可以胡子拉楂的去上班。
+
+定时修眉：
+
+保持手部卫生：
+
+- 手掌：洗涤，指甲，死皮，伤残
+- 肩膀：正式场合不易裸露
+
+口腔卫生： 坚持每天刷牙，可能的话，吃完每顿饭后都要刷一次牙。
+
+仪表：包括容貌，举止，姿态，风度等。
+
+## 第二章 发型设计
+
+- 三庭：发际线，眉心，鼻翼下缘，下巴尖
+
+- 五眼：
+
+长脸：高的前额和长的下巴，注意头发长短平衡，如果侧边过短头顶过长，就更容易显得脸长。 
+
+修饰方法：运用刘海，发型的厚度
