--- a/老宋交易系统.md
+++ b/老宋交易系统.md
@@ -1,7 +1,133 @@
 # 老宋交易系统
 
-# MA： 简单移动平均线
+## 前言
 
+这份交易系统花费了我2年的时间完善，希望三年后能够跑出一个好的成绩。
+
+该交易系统的本质是在价值投资的基础上，抓住中期趋势与长期，尽可能的提高资金利用率。这篇文章主要分为三部分，第一部分讲价值投资的部分，第二部分讲趋势投资的部分，第三部分讲背后的原理。
+
+## 我的投资目标
+
+通过对自己程序员黄金十年的推算，35岁的我应该能够至少攒够 500w 的现金储备，而 500w 要想实现财富自由依旧是痴人说梦，但是如果我能找到一个年化在 20%-30% 的交易系统的话， 拿出 300w 来做股票投资，我一年的收益就能达到 60-90w，完全足够支撑我财富自由。
+
+因此，我的目标是在这十年期间找到一份合适的交易系统，在35岁实现真正的财富自由。因此这份交易系统会不定时的更新，目前的交易系统在不断的实验中。
+
+## 价值投资为盾，趋势投资为矛
+
+最初的我是相信价值投资理论的，但是价值投资解决不了三个核心问题：
+
+- **第一个问题：**作为一个打工仔，一个各方面不占优势的普通人（虽然我蛮聪明的），怎么去从A股中找到那些不财务造假的所谓价值呢？当康美药业都财务造假后，你还敢相信A股的价值投资吗？
+- **第二个问题：**作为一个普通人，当面对漫漫下跌路的时候，真的能够抗人性吗？ 我试过，当跌跌不休的时候，带来的怀疑，这才是人性。
+- **第三个问题：**卖不卖，何时卖？ 买不买，何时买？
+
+趋势交易的一个好处在于，择时降低这种怀疑感，择时之后，其实已经应对了绝大部分的下跌，往往已经较为接近底部，当在选择卖出时，往往已经有明显的趋势信号。本质上来说，就是通过择时来降低对人性的考验，降低对个股的价值研究难度。
+
+## 以价值投资选股
+
+### 1. 股票池
+
+股票池主要包含三大部分：
+
+- **宽基ETF：** 包括美股，A股等主要市场的宽基指数ETF
+- **行业ETF：**包括 A 股市场盘子规模较大的行业ETF，以及一些其他资源类ETF
+- **价值龙头股：**大盘股是对不在上述两大 ETF 体系中的股票，比如说中国平安，因为没有保险ETF，因此对其进行补充。
+
+主要选择 ETF 而不直接选择行业龙头主要有两大因素考虑：
+
+1. 龙头的市值较大，其涨幅往往不如 ETF
+2. 龙头也存在暴雷情况，如康美药业，为了稳健，选择 ETF 最佳
+
+价值龙头股的选择通过价值投资的方式选择一批大市值的股票与自己看好的行业股票，以半年级别进行更新。具体选股指标为：
+
+- 净资产收益率(ROE) 连续3年均在20%左右 或 净利润增速在50%以上
+- 净资产收益率，营业收入，净利润近几年呈现连续增长状态
+- 在沪深300，创业 50 中选择
+- 流通市值与总市值不能差距过大
+- 补充：行业具有很强的前景如新能源，医美，宠物，环保等
+
+通过这个步骤，大致可以维护一个100只左右的股票池，按照半年级别进行更新。
+
+### 2. 趋势观察
+
+趋势观察分为三部分：
+
+- 宏观趋势观察：通过涛动周期理论+政府宏观调控政策判断经济运行周期
+- 中观趋势观察：结合具体行业周期特性，判断行业所处环境，挑选下一阶段具备投资价值的标的
+- 微观趋势观察：通过 MA 均线系统 来对具体的 **股票或ETF** 进行观察筛选
+
+## 以趋势投资择时
+
+我将交易系统的趋势投资分为四部分：
+
+- 观察系统：从股票池中找到符合趋势转折特征的股票，加入交易区间中
+- 推演系统：通过均线与抵扣价原理推演趋势发生转折的时间点和价格
+- 交易系统：推演过后，得到多个加仓位置，制定计划，当股票按照推演运行时，按计划操作
+- 卖出系统：持续追踪交易后的股票，按照发展不断调整自己的止损止盈位置
+
+本系统采用 **MA均线 + EMA 均线 + 抵扣价原理** 配合使用。
+
+### 1. 观察系统
+
+观察系统的本质是通过均线来判断哪些股票进入到了趋势转折的关键期，判断依据主要有以下几大特征：
+
+- **进行了一段半年左右的下跌行情：**没有股票永远涨，因此无论是茅台也好，宁王也好，都会进入下跌趋势，而下跌趋势往往不是一两个月就可以消化的。
+- **20 均线走稳：**当股票在下降趋势中出现20均线走稳，这表明此时的趋势强度发生变化
+- **逐渐放量：**趋势发生转折的必要条件就是需要有足够的换手率将筹码进行交换，因此此时的交易量应该是逐渐放大的。
+
+### 2.  推演系统
+
+推演系统的主要目的是为了制定交易计划，尽可能降低股价波动对于人性的考验，严格按照纪律操作。
+
+推演主要采用 MA 均线与抵扣价原理，EMA 均线来辅助。采用抵扣价原理是为了解决均线的滞后性问题。 
+
+推演系统要解决以下几个问题：
+
+1. 20 均线什么时候会发生拐头向上
+2. 20均线什么时候会跟 60均线进行金叉
+3. 60均线什么时候会发生拐头向上
+4. 20均线什么时候会跟120均线进行金叉
+5. 60均线什么时候会跟120均线进行金叉
+6. 120均线什么时候开始拐头向上
+7. **什么时候会发生均线密集，均线密集代表着一波大行情的开始**
+8. 什么时候会发生多头排列
+
+### 3. 交易系统
+
+交易系统的主要目的是设置自己的买入点， 买入点需要根据实际的股票股性进行调整，初步的买入点如下：
+
+- 已经发生20均线拐头向上，推算何时20均线金叉60均线，60均线何时拐头向上，在必由之路上买入第一笔，1成仓位
+- 当买入第一笔后，向上突破震荡区间，且此时的盈亏比依旧在合理范围内时，加第二笔，1成仓位。
+- 当买入第一笔后，后面发生了均线密集，且震荡箱体形成，那么在跌到箱体底部时可以试探性加半成仓位。
+- 当买入第一笔后，又开启了一波下跌趋势且跌穿箱体，此时需要等待趋势再一次进入推演区间，之后按照加倍仓位进行购买。
+- 当买入第一笔后，又开启一波下跌趋势且跌破箱体，当乖离率较大时（20均线大幅偏离60均线），那么在推断20均线发生拐头时加一成仓位。
+
+原则上，一只股票占据的仓位最多3成，但如果是ETF或者确定性非常高的绩优股，可以满仓。
+
+**如果没有在合适位置买入，则就不再买入，控制风险。**
+
+### 4. 卖出系统
+
+从第一笔买入到卖出，持有周期根据趋势的判断而定，我们预期最少抓住的是中期趋势，3个月以上， 盈利空间至少应该在20%以上才会考虑退出。
+
+卖出系统主要解决我们时候时候卖出的问题，卖出主要分为止损卖出和止盈卖出。
+
+**止损卖出：** 原则上不进行主动止损，只在行业发生重大变化，公司发生重大基本面变化时候进行止损。
+
+**止盈卖出：**
+
+- **第一压力位：**第一笔卖出在上一个压力位，此时可以减半仓观察。
+- **前高位置：** 如果没有突破前高产生回落，减仓观察
+- 当从压力位回落后，需要重新判断公司或行业现在的空间，如果认为依旧值得，可以在回落到20均线处进行补仓；如果认为趋势已尽，留个几千块钱底仓即可。
+- 当突破压力位后，等待回踩确认后补仓进入。
+- 当盈利丰厚且周线级别趋势形成时，以周线级别作为卖出参考。
+
+
+
+
+
+## 背后原理 - 趋势
+
+MA： 简单移动平均线
 
 $$
 \text{MA5} = \frac{最近5天的收盘价求和}{5}   \\
@@ -13,7 +139,7 @@ $$
 
  
 
-# EMA ：指数移动平均线
+EMA ：指数移动平均线
 
 EAM：当前价格权重最大。 **价在线上，线向上，价在线下，线向下**
 
@@ -24,54 +150,19 @@ $$
 \text{明天的MA5} = \frac{C[1] + C[0] + C[-1] + ... + C[-3] }{5}
 $$
 
-## 抵扣价原理
+抵扣价原理：
+
+
 
 
 
 ## 操作原则
 
-操作遵循几个基本原则：
+### 1. 一定不能做的事情
 
 - 不听大V，同事，同学推荐股票
 - 不在早上交易股票，除非是昨晚已经做好的决定
 - 宁可放过，不急躁入场，风险，风险，风险。 股市中不缺机会，缺的是眼光。
-
-## 趋势交易系统：以价值选股，以趋势选时 
-
-### 1. 买入什么样的股票
-
-通过价值投资的方式选择一批大市值的股票与自己看好的行业股票，以半年级别进行更新。具体选股指标为：
-
-- 净资产收益率(ROE) 连续3年均在20%左右 或 净利润增速非常高，在50%以上
-- 净资产收益率，营业收入，净利润近几年呈现连续增长状态，
-- 毛利率要高
-- 总市值要在500亿以上
-- 行业具有很强的前景如新能源，医美，宠物
-
-通过这种选股方式，我们能够初步过滤掉一些垃圾股。
-
-### 2. 什么位置买入股票
-
-- 首先，从股票池中选择已经经历过长达半年以上的下跌趋势，且20日均线呈现走稳的股票
-- 然后，通过抵扣价原理判断20日均线何时进行拐头，在20日线如推演发生拐头之后，
-- 其次，推断何时20日线上穿60日均线，当可以确定20日线一定会上穿60日线后，买入第一笔，1成仓位
-- 如果没有在合适位置买入，则就不再买入，控制风险。
-
-### 3. 持有的周期多长
-
-对于当前的趋势交易策略，持有周期根据趋势的判断而定，我们预期最少抓住的是中期趋势，3个月以上。
-
-### 4. 卖出时间点的选择
-
-我们判断是要抓住的是至少中周期，因此盈利空间至少应该在20%以上才会考虑退出。
-
-退出以20日均线判断何时拐头向下进行第一笔卖出，60日线拐头向下为第二笔卖出。
-
-**不进行止损操作，除非行业或公司发生了巨大的变化。**
-
-
-
-## 绝对禁止做的事情
 
 - 不要玩期货，股指期货。
 - 不要玩次新股（上市两年以内）。 福蓉科技就是下场
@@ -82,7 +173,7 @@ $$
 - 远离高位庄股
 - 不能成功封停的股票，要先出局观望
 
-## 一定要做的事情
+### 2. 一定要做的事情
 
 - **大环境好，市场成交量急剧放大，追强势板块**。 如2014-2015， 2019年初
 - **整个板块盈利，基本面改善，个股盈利大爆发**。如17年的猪肉股，20年的有色煤炭钢铁，21年的半导体。
