--- a/股票投资/基金与ETF投资/老宋基金投资计划.md
+++ b/股票投资/基金与ETF投资/老宋基金投资计划.md
@@ -14,35 +14,31 @@
 - **参与宽基：** 沪深300， 创业50， 科创50， 中证500
 - 定投策略：这部分其实需要考虑到低估与高估区间的概念，建议低估区间多投，高估区间少投。
 
-| 基金名称                     | 基金代码 | 指数    | 基金经理     |
-| ---------------------------- | -------- | ------- | ------------ |
-| 华宝沪深300指数增强A         | 003876   | 沪深300 | 徐林明、王正 |
-| 易方达上证50增强A            | 110003   | 上证50  | 张胜记       |
-| 申万菱信中证500指数优选增强A | 003986   | 中证500 | 刘敦         |
-| 华安创业板50指数             | 160420   | 创业50  | 刘璇子       |
-| 华夏科创板50ETF联接A         | 011612   | 科创50  | 荣膺、张弘弢 |
-|                              |          |         |              |
-|                              |          |         |              |
+| 基金名称                     | 基金代码 | 指数     | 基金经理     |
+| ---------------------------- | -------- | -------- | ------------ |
+| 华宝沪深300指数增强A         | 003876   | 沪深300  | 徐林明、王正 |
+| 易方达上证50增强A            | 110003   | 上证50   | 张胜记       |
+| 申万菱信中证500指数优选增强A | 003986   | 中证500  | 刘敦         |
+| 华安创业板50指数             | 160420   | 创业50   | 刘璇子       |
+| 华夏科创板50ETF联接A         | 011612   | 科创50   | 荣膺、张弘弢 |
+| 华泰柏瑞中证港股通50ETF联接A | 012151   | 港股通50 | 何琦、李茜   |
+|                              |          |          |              |
 
 ## 2. 被动性行业指数基金定投
 
-- **目的：** 考虑到国内市场近几年的特性，往往是某一行业或某几个行业的结构性牛市，预测未来十年也会依旧是这种结构性牛市的状态，会慢慢向美股靠齐。
-- **可参与行业指数基金：** A股市场是成长与白马风格切换的，因此不同时期买不同的基金
-  - 成长类型基金：新能源，半导体
-  - 大白马类型基金：消费， 医疗，劵商
-- **定投计划：** 低估定投，高估卖出
+- **目的：** 考虑到国内市场近几年的特性，往往是某一行业或某几个行业的结构性牛市，预测未来十年也会依旧是这种结构性牛市的状态，会慢慢向美股靠齐，因此每年会挑选几个认为长期看好的行业进行定投。
 
-| 基金名称                   | 代码   | 行业        | 基金经理 |
-| -------------------------- | ------ | ----------- | -------- |
-| 中欧医疗创新股票A          | 006228 | 医药-创新药 | 葛兰     |
-| 中欧医疗健康A              | 003095 | 医药        | 葛兰     |
-| 招商中证白酒指数           | 161725 | 白酒        | 侯昊     |
-| 农银新能源主题混合基金     | 002190 | 新能源      | 赵诣     |
-| 华夏国证半导体芯片ETF联接A | 008887 | 半导体      | 赵宗庭   |
-| 汇添富消费行业混合         | 000083 | 消费        | 胡昕炜   |
-|                            |        |             |          |
-|                            |        |             |          |
-|                            |        |             |          |
+| 基金名称                     | 代码   | 行业        | 基金经理 |
+| ---------------------------- | ------ | ----------- | -------- |
+| 中欧医疗创新股票A            | 006228 | 医药-创新药 | 葛兰     |
+| 中欧医疗健康A                | 003095 | 医药        | 葛兰     |
+| 招商中证白酒指数             | 161725 | 白酒        | 侯昊     |
+| 农银新能源主题混合基金       | 002190 | 新能源      | 赵诣     |
+| 华夏国证半导体芯片ETF联接A   | 008887 | 半导体      | 赵宗庭   |
+| 汇添富消费行业混合           | 000083 | 消费        | 胡昕炜   |
+| 国泰中证畜牧养殖ETF连接A     | 012724 | 畜牧        | 梁杏     |
+| 南方中证全指证券公司ETF联接A | 004069 | 劵商        |          |
+|                              |        |             |          |
 
 
 
