--- a/股票投资/趋势投资/股市趋势技术分析.md
+++ b/股票投资/趋势投资/股市趋势技术分析.md
@@ -23,3 +23,123 @@
 
 ## 第十四章 趋势线和通道
 
+
+
+
+
+## 第十八章 战术问题
+
+你对长线趋势的预判可能十分精准，你的长期策略也可能完全正确，但如果没有合适的战术，就好比作战缺少了部署能力，你就无法运用所学的知识达成投资目标。
+
+投资和投机本质上存在差异：
+
+- 投机者只盯着股票本身，而不管公司的基本面。技术方法只研究股票买方，卖方和持有方对股票价值的看法
+- 分红。纯投资者通常只考虑持有股票的收益或潜在收益，即股票的现金分红。
+- 技术派投资者一般不采取买入并持有的投资策略
+
+
+
+技术分析认识到市场是一个敏感的机制，所有人的观点最终都反映在一个数字，即某一特定时刻的股价。各种技术形态表现了实际价值的变化，反映出人们的预期，希望，恐惧和行业的动向，并综合考虑了其他一切已知的信息。
+
+短线利润是利用趋势变化赚取的回报，也是为市场提供流动性而获得的回报。与长线投资者相比，短线投资者需要快进快出，并自负盈亏。
+
+长线投资者：希望至少获得市场回报率的人，因为长期经验表明，这完全可以通过被动式指数化投资来实现。
+
+长线投资者的策略是把握长期趋势，即参与延续数月乃至数年的交易。但这一策略并不适合长期熊市。当熊市信号出现时，投资者应当及时卖出或对冲。
+
+**每一种策略都必须考虑最坏的情形，即熊市**
+
+200天移动平均线被广泛视为长线趋势指标。有些东西正因为人们相信它，而真的变成现实。
+
+在长线持有和短线博弈之间，并不一定存在冲突，具体取决于手头上的资金规模，还取决于投资者希望在交易中投入的时间，精力和金钱。
+
+一个长线投资策略：关注主要的平均指数，在指数上上突破，接近整固形态底部或出现反抽时买入，在股价跌穿趋势线或支撑区时卖出或对冲。
+
+**不要将长线投资与买入并持有混为一谈**
+
+**买涨不买跌，卖跌不卖涨**
+
+## 第19章 一些非常重要的细节
+
+为交易过的股票保存一份简单又完整的资料，包括每一笔买卖和每一次分红的信息。
+
+
+
+## 第20章 投机者青睐的股票
+
+对于独立投资者来说，指数基金也更为灵活。
+
+为了降低混乱性，普通投资者应该将注意力集中在最重要的一些指数上。一个人处理的工具越多，他的投资战略和战术就越复杂。
+
+即便是长线投资者，也不应该让熊市毁掉流动性和权益价值。
+
+市场是由众多股票组成的，而非铁板一块。这意味着，当道指和标普指数下行，个股走势方向不明时，必须谨慎对待自己的多头仓位。值得注意的是，就投资回报而言，这些工具比不上精挑细选出来的个股。
+
+长线投资者和中线投机者都试图捕捉长线（以及周期性的）市场趋势，他们不屑于参与市场高昂的短线频繁交易。因为他们认识到，风险会随着时间以及趋势而波动，短线频繁交易的受益者主要是劵商。
+
+## 第21章 选择要跟踪绘图的个股
+
+对于技术分析派来说，公司在资本市场上的股性比它们从事什么行业，实现多少盈利更重要。
+
+所有的交易记录都只反映过去，而非预示未来；许多时候，股价走势图反映出一些人掌握不为人知的内幕信息。
+
+选择股票时候，要考虑股票的类型，特点，习性，而不是企业的具体业务。
+
+选择交投活跃的上市公司股票
+
+如果投资者的目标是跑赢市场，那么他可以选择只投资于盯住指数的ETF
+
+## 第 22 章  选择要跟踪绘图的个股：续
+
+在选股时应选取各版块或基础行业中有代表性的股票。
+
+- 低价股的波动幅度高于高价股
+- 在跌势中回调较小的个股在涨势中的涨幅也会相对较小，而那些在跌势中急跌的个股在牛市中则会暴涨
+
+低价股不仅涨的快，跌的也快。
+
+价格区间合适，交易活跃，对大市反应敏感，且供应量充足。
+
+## 第 23 章 高风险股票的挑选和管理：郁金香股票，互联网板块和投机性狂热
+
+如何在狂热的环境下真正获利：
+
+- 首先是要保持冷静
+- 发行价为12美元的股票在开市时可能会疯涨到50美元。对于技术分析师来说，这是有人要被宰了的信号
+
+对于暴涨的股票，应该随着股价的攀升不断抬高止损位，因为暴涨往往是非理性的博弈。
+
+- 第一条：谨慎的投机者不会向此类企业投入太多钱，一般只投最多 5%-10%的资金
+- 第二条：切莫太早卖空这些股票。要等明确的高点出现后再卖空，以防股价再次暴涨
+- 第三条：情绪化交易郁金香，互联网股或其他任何东西，都可能导致巨亏。要在技术图表上发现并把握关键反转日。
+
+除非你是巴菲特，否则你买的是股票，而不是公司。
+
+除非你有丰富的投机经验并在此类交易中亏过钱，否则不要轻易入场，切莫轻信任何投资建议。
+
+
+
+## 第24章 股价可能出现的变化
+
+那些在牛市中涨幅居前的个股往往在熊市中跌幅居前，而那些在牛市中显得滞涨的个股往往在熊市中更为抗跌。
+
+那些波幅很小，分红稳定的股票虽然是理想的投资品种，但却不是理想的交易品种。
+
+通过回顾某只股票过去数年的交易记录，将其波幅与大盘波幅相比较，你可以较好的了解该股票的习性。
+
+个股有自己的特性，行业也一样。
+
+
+
+## 第25章 两个敏感问题
+
+
+
+
+
+## 第27章 止损指令
+
+第一类指令是保护性止损指令
+
+
+
