--- a/股票投资/趋势投资/趋势交易核心课程.md
+++ b/股票投资/趋势投资/趋势交易核心课程.md
@@ -48,7 +48,7 @@ https://www.bilibili.com/video/BV13t4y1S7LH?p=2
    - 下降趋势线反弹后再次回落不创新低
 3. 再次突破颈线位置
 
-![](.\img\趋势交易1.png)
+![](..\img\趋势交易1.png)
 
 **大盘比个股有效**
 
@@ -62,11 +62,9 @@ https://www.bilibili.com/video/BV13t4y1S7LH?p=2
 
 空头排列： 股价在所有均线之下， 短，中，长期均线从下到上的顺序排列
 
-![](.\img\趋势交易2.png)
-
 ### Granville八大法则
 
-![](.\img\趋势交易3.png)
+![](..\img\趋势交易3.png)
 
 - A点是趋势逆转点，安全性较高，中长线买点。 但不容易识别，需要与其他底部信号结合使用
 - B点是最容易辨认的买点，安全性高
@@ -91,14 +89,4 @@ https://www.bilibili.com/video/BV13t4y1S7LH?p=2
 
 - 支撑位： 股价下跌到某个价位附近，买方增加，卖方减少，股价在该价位出现企稳，开始反弹。
 - 压力位：股价上涨到某个价位附近，卖方增加，买方减少，股价上涨受阻，开始回落
-
-## 选股
-
-### 1. 基本面指标
-
-- 最重要的基本面：业绩， 股价 = 每股收益 * 市盈率
-- 最重要的基本面指标：每股收益，净利润，营业收入，净资产回报率
-- 所有的大牛股大涨之前基本面都开始改善，净利润，营业收入，每股收益，持续增长。 长牛股的秘密就是长期维持高的净资产回报率
-
----
 
