--- a/股票投资/趋势投资/趋势交易系统.md
+++ b/股票投资/趋势投资/趋势交易系统.md
@@ -11,13 +11,13 @@
 - 术：有效趋势线， 趋势拐点，大小周期嵌套
 - 器：方向：趋势线； 位置：形态等； 势能：成交量（力度）， 斜率（速率）
 
-![](.\img\趋势_2.png)
+![](..\img\趋势_2.png)
 
-![](.\img\趋势_1.png)
+![](..\img\趋势_1.png)
 
 
 
-![](.\img\趋势_3.png)
+![](..\img\趋势_3.png)
 
 投资最重要的事情： 定规则，控情绪，守纪律
 
@@ -52,21 +52,21 @@
 
 - 趋势： 就是指某一特定周期内价格的波动方向
 
-![](.\img\趋势_5.png)
+![](..\img\趋势_5.png)
 
 
 
-![](.\img\趋势_6.png)
+![](..\img\趋势_6.png)
 
 ### 2.1 一线定乾坤：切线法
 
-![](.\img\趋势_7.png)
+![](..\img\趋势_7.png)
 
-![](.\img\趋势_9.png)
+![](..\img\趋势_9.png)
 
 
 
-![](.\img\趋势_10.png)
+![](..\img\趋势_10.png)
 
 关键支撑位的确认：
 
@@ -82,39 +82,39 @@
 | 单边上升趋势后的关键黄金分割点 | 单边下跌趋势后的关键黄金分割点 |
 |                                |                                |
 
-![](.\img\趋势_11.png)
+![](..\img\趋势_11.png)
 
 
 
-![](.\img\趋势_12.png)
+![](..\img\趋势_12.png)
 
 有效趋势线的核心在于如何运用，不必可以理解它的支撑和阻力转换。它界定了一种预期中的趋势，而什么时候突破都是未知数。但突破趋势线，就可以提醒我们注意趋势可能要改变了。
 
 ### 2.2 趋势有效突破的认定
 
-![](.\img\趋势_13.png)
+![](..\img\趋势_13.png)
 
 - 穿越趋势线后，离趋势线越远，突破越有效。 要自定一个突破确认幅度： 3%
 - 在上涨趋势线上方： 上涨放量，下跌缩量，将有效的确认上升趋势
 - 在下降趋势线的下方： 下跌放量，上涨缩量，将确认下跌趋势的有效性‘
 
-![](.\img\趋势_14.png)
+![](..\img\趋势_14.png)
 
 
 
-![](.\img\趋势_15.png)
+![](..\img\趋势_15.png)
 
 
 
-![](.\img\趋势_16.png)
+![](..\img\趋势_16.png)
 
-![](.\img\趋势_17.png)
+![](..\img\趋势_17.png)
 
-![](.\img\趋势_18.png)
+![](..\img\趋势_18.png)
 
-![](.\img\趋势_19.png)
+![](..\img\趋势_19.png)
 
-![](.\img\趋势_20.png)
+![](..\img\趋势_20.png)
 
 
 
