--- a/股票投资/趋势投资/雷公思想.md
+++ b/股票投资/趋势投资/雷公思想.md
@@ -1,5 +1,19 @@
 # 雷公思想
 
+
+
+## 003 投资收益的三大构成
+
+- 现金收益：债券，房地产REIT
+- 贝塔收益：跟随市场的钱，买指数基金
+- 阿尔法收益：独特的投资逻辑，交易系统
+
+## 011 困境反转操作要领
+
+ 
+
+
+
 ## 趋势转折的5个关键步骤
 
 由下降趋势转变为上升趋势的5个步骤：
@@ -134,28 +148,7 @@ SEA： 算术移动平均线
 
 
 
-## 那些年你卖飞的股票
 
-- 估值高不是卖出股票的必要条件
-- 牛市不做波段，抱住不放
-- 一定要了解生意，能做到多大
-- 高成长的企业高估值
-- 做投资，要懂得商业模式，你投资的不是股票，而是生意
-- 做投机，要洞悉人性之极，你交易的不是价格，是情绪
-- 没有本事不要瞎折腾，大多数我们赚的都是趋势的钱
-
-一个人一辈子能赚多少钱，跟你的价值观有关，与你的技术什么的无关。
-
-## 投资最重要的事情
-
-- 独立思考：有一个独立的人格，有独立的思维
-- 股票市场最重要的是企业的价值。重要的不是买好的，而是买的好。你的买入价格与企业未来的成长空间有多大，盈亏比就有多大。
-- 重要的不是波动的风险，而是本金永久损失的风险。期货，期权，保证金交易都会损失本金。
-- 最大的风险不在人人恐惧的时候，而在人人乐观的时候。股市的常态是绝大多数人亏钱。
-- 不要频繁的操作。多动多错，耐心等待。
-- 最重要的是让时间成为朋友
-- 最重要的不是进攻，而是防守
-- 投资最重要的是时时刻刻保持自己情绪稳定，不在盘中做任何决定
 
 ## 反身性原理
 
@@ -263,4 +256,35 @@ SEA： 算术移动平均线
 - 企业很容易被政府取缔控制，不安全
 - 港股市场很烂，一个国家不可能只有一种货币
 - 不要买任何有政治风险的公司
+
+
+
+## 070 那些年你卖飞的股票
+
+- 估值高不是卖出股票的必要条件
+- 牛市不做波段，抱住不放
+- **一定要了解生意，能做到多大**
+- 高成长的企业高估值
+- 做投资，要懂得商业模式，你投资的不是股票，而是生意
+- 做投机，要洞悉人性之极，你交易的不是价格，是情绪
+- 没有本事不要瞎折腾，大多数我们赚的都是趋势的钱
+
+一个人一辈子能赚多少钱，跟你的价值观有关，与你的技术什么的无关。
+
+
+
+## 071 投资最重要的事情
+
+- 独立思考：与众不同的思维方式。有一个独立的人格，有独立的思维。
+  - 不要无脑跟，不要盲目崇拜任何人
+  - 有对立面的思维：人人都看好的不一定好，人人都不看好的事情不一定不好
+- 规律和常识比什么事情都重要
+- 最重要的是不是价值，不是价格，而是盈亏比
+- 股票市场最重要的是企业的价值。重要的不是买好的，而是买的好。你的买入价格与企业未来的成长空间有多大，盈亏比就有多大。
+- **重要的不是波动的风险，而是本金永久损失的风险。**期货，期权，保证金交易都会损失本金。
+- 最大的风险不在人人恐惧的时候，而在人人乐观的时候。股市的常态是绝大多数人亏钱。
+- 不要频繁的操作。多动多错，耐心等待。
+- 最重要的是**让时间成为朋友**
+- 最重要的不是进攻，而是防守，避免发生重大错误。
+- 投资最重要的是**时时刻刻保持理性，保持自己情绪稳定，不在盘中做任何决定。**
 
