--- a/股票投资/趋势投资/雷公的交易系统.md
+++ b/股票投资/趋势投资/雷公的交易系统.md
@@ -1,39 +1,74 @@
 # 雷公的交易系统
 
+观察系统
+
+预警系统
+
+交易策略
+
+执行系统
+
+安全系统
+
+## 播出预告
+
+一个好的交易系统不是去预测，而是去预警
+
+人性在里面，核心不变
+
+观察系统：哪些特征下设置你的观察点：价量时空形成趋势
+
+预警系统：四项基本原则：**大量，缺口，密集，乖离**
+
+交易系统：达到什么样的信号执行交易。**2B， 假突破，破底翻，回撤**
+
+执行系统：具体如何执行。纯手动，全自动，半自动
+
+安全系统：达到什么情况下，对交易进行肯定和否定。 资金管理，盈亏比，止盈止损。
 
 
-## 观察系统
+
+## 了解趋势
+
+如果你的脑子看不见，那么你的眼睛也是看不见的。
+
+观察系统首先是一个思考系统
+
+观察系统也是一个取舍系统
+
+最真实的数据：价格和成交量
 
 趋势： 价格，成交量/额，时间，空间
 
+趋势： 转折，开始，发展，极端（斜率加大），再转折。本质是斜率不断发生变化的过程
+
 **绝大多数人赚的都是趋势的钱。** 时代红利。
 
-趋势变化：转折，开始，发展，极端，转折（斜率发生变化）
+斜率的改变代表着阶段发生了变化，等待斜率发生变化才会有更好的机会
 
-等待斜率发生变化才会有更好的机会
+图形分析不是预测，图形分析告诉已经发生了什么，即将大概率发生了什么
 
-均线：
+趋势的强度本质就是斜率的变化 
 
-- EMA：
-- MA：抵扣价原理，均线密集
+**核心： 用MA 均线+抵扣价原理判断趋势什么时候拐头，用EMA均线判断这个拐头是否有效**
 
-用MA 均线+抵扣价原理判断趋势什么时候拐头，用EMA均线判断这个拐头是否有效
-
-均线密集之后通常是一波大行情的开始。
+**均线密集之后通常是一波大行情的开始。**
 
 乖离率：股价偏离长期均线的距离
 
 均线密集的本质：市场短期中期长期的交易成本趋于一致
 
-## 预警系统
 
-价格围绕成本波动
+
+## 可预知的趋势
+
+**价格围绕成本波动**
 
 成本对价格有拖拽作用
 
-趋势一旦形成，很难发生改变，只要人性不变，趋势就不变
+**趋势一旦形成，很难发生改变，只要人性不变，趋势就不变**
 
-研究的是市场平均成本和人性
+研究的是**市场平均成本和人性**
 
 **MA均线的抵扣现象**
 
@@ -41,30 +76,36 @@
 
 运用抵扣价原理预测均线的方向
 
-
-
 MA均线+抵扣价来预演趋势什么时候发生改变
 
 EMA均线来判断趋势改变的有效性
 
+利用抵扣价原理，对未来一段时间均线的运行情况进行预演。这种战术演练，有助于我们对尚未发生的战局做出预案，从容应战。
 
 
-## 交易策略
+
+
+
+## 必由之路
+
+趋势的本质是市场成本的变化
 
 均线的拐头就意味着斜率发生了变化
 
-趋势的开始阶段
+在趋势的必由之路上做好准备
 
-趋势的发展阶段
+趋势的发展：
 
-趋势的极端阶段
+- 趋势的开始阶段
+
+- 趋势的发展阶段
+
+- 趋势的极端阶段
 
 两个关键的交易信号：
 
-1. 2B结构
-2. 下一级别的均线密集
-
-
+1. 2B 结构
+2.  下一级别的均线密集
 
 重点提示：
 
@@ -72,7 +113,11 @@ EMA均线来判断趋势改变的有效性
 2. 向下运行的抵扣价和向上运行的股价会使得均线加速上行
 3. 往往在大行情开始前的挖坑动作，也称为黎明前的黑暗，就是为了能够在行情逆转之初实现均线快速拐头，加速上行的均线对股价有助推作用。
 
-2B只能解决过度偏移之后的回归问题，或许运气好可以买在相对低点。而真正的大行情往往在均线密集之后发生
+2B只能解决过度偏移之后的回归问题，或许运气好可以买在相对低点。而**真正的大行情往往在均线密集之后发生**
+
+
+
+
 
 
 
@@ -84,15 +129,23 @@ EMA均线来判断趋势改变的有效性
 
 分歧越大，未来行情的确定性就越强
 
+明天的事情，后天就知道了
 
+堆量式上涨会消耗大量买盘，要么涨不高，要么不持久
 
+行情推演最重要的目的是找到“最佳战机”
 
+下行的抵扣价与上行的股价形成剪刀差，会加速均线拐头的力度和斜度
 
-## 执行系统
+空间：市场不同时期形成的平均交易成本之间的落差
 
+盈亏比：预期上行空间除以下行止损空间
 
+## 人性之极
 
-## 安全系统
+索罗斯《金融炼金术》， 索罗斯认为，市场是非理性的，最终的结果只有两个：泡沫或崩溃
+
+反身性
 
 金融市场就是人性市场
 
@@ -112,7 +165,7 @@ EMA均线来判断趋势改变的有效性
 
 区间震荡行情的市场意义：让市场各个时期的交易成本趋于一致
 
-成功的投资者成功之关键在于他们的思考方式，而不是使用什么技术方法。
+**成功的投资者成功之关键在于他们的思考方式，而不是使用什么技术方法。**
 
 索罗斯的反身性原理：
 
@@ -121,11 +174,15 @@ EMA均线来判断趋势改变的有效性
 - 看不懂：主流的共识
 - 来不及：全市场共识
 
-
-
 人性之极： 分歧->漠视->默许->共识->追随->亢奋（贪婪，恐惧）
 
 四大基本原则：大量，缺口，密集，乖离。
 
+---
 
+趋势扩散：
+
+- 趋势由低级别向高级别逐步推进
+- 成本由短期带动长期逐步推进
+- 低级别服从高级别，短期服从长期
 
