--- a/认知提升/财富自由之路.md
+++ b/认知提升/财富自由之路.md
@@ -68,10 +68,10 @@
 与注意力相比，钱不是最重要的，因为它可以再生，时间也不是最重要的，因为它本质上不属于你，你只能试着跟它做朋友，让它为你所用。
 
 - 要把注意力放在自己的成长上。放在一切可以有积累效应的技能上，然后给予充分的学习，思考和磨练。
-- 要放在自己的真爱上。真爱的意思是，你甚至愿意把自己最宝贵的财富浪费在他们身上
+- 要放在自己的真爱上。**真爱的意思是，你甚至愿意把自己最宝贵的财富浪费在他们身上**
 - 把注意力放在对整个社会真正有贡献的事情上
 
-### 1、 怎么花费你的注意力是最合理的
+1、 怎么花费你的注意力是最合理的
 
 ## 5. 付费就是捡便宜
 
