--- a/博客文章/股票文章/周期论 周期行业.md
+++ b/博客文章/股票文章/周期论 周期行业.md
@@ -6,14 +6,32 @@
 
 ## 化工行业
 
+龙头：万华化学
+
 化工作为周期中游行业，下游涵盖衣食住行的各个领域。在经济复苏背景下，是确定性较强的受益行业。
 
 在经济复苏周期中，周期中上游和原料板块盈利最先改善。
 
+## 钢铁行业
+
+需求端： 钢铁虽然还在增长，但是一个不折不扣的夕阳产业，且未来会更加明显
+
+应用领域： 房地产，基建，机械和汽车等制造业
+
+由于我们城镇化和工业化还没完全完成，所以钢铁需求还没下降，但只是时间问题。
+
+供给端： 钢铁行业的产能出清比需求下滑更快，使得行业格局明显改善，头部集中的趋势非常明显。
+
+- 劣质产能出清
+
+- 存量产能并购，重组，优化
+
+## 煤炭行业
 
 
-## 电力行业
 
 
+
+ 
 
 [1] 年初至今涨幅第二，这个行业为何站上风口
