--- a/博客文章/股票文章/成长 新能源.md
+++ b/博客文章/股票文章/成长 新能源.md
@@ -7,3 +7,61 @@
 - 从中端提升节能减排水平，包括产业结构转型，提高能源利用率等。典型的如新能源车。
 
 - 从后端出发，提高资源循环利用水平，促进资源品的回收再利用。
+
+## 火电
+
+火电是我国第一大发电来源，占比在70%以上。中长期来看，火电的机会不大。但在相当长的一段时间内，火电依旧是我国的主要发电方式。
+
+## 水电
+
+龙头： 长江电力
+
+水电是我国第二大主力发电类型，占比 16% 左右。
+
+缺点： 建设成本高，回报周期长
+
+优点：后期的运营成本非常低
+
+水电开发的性价比不高，未来的比重也会逐步降低。
+
+## 光伏
+
+光伏是过去十年我国发展最快的可再生能源
+
+目前最具投资价值的赛道
+
+优势：
+
+- 光伏平价大时代来临，成为中国最便宜的能源。
+
+- 中国主导全球的光伏供应链，竞争优势非常突出
+
+过去10年，全球光伏装机复合增长率达到20%以上。
+
+中国光伏 3成满足国内需求，7成满足海外市场。
+
+龙头：隆基股份
+
+## 风电
+
+龙头：东方电缆
+
+风电是我国第三大发电类型，占比 5% 左右，属于未来前景最好的清洁能源之一。
+
+优势： 资源丰富，地域分布广，厂址选择受限小，运行成本低，固定投资成本也比水电，核电低。
+
+是现阶段技术经济条件下，实现碳中和的必然选择之一。
+
+劣势： 季节性能源分布不均，天气影响较大，发电出力波动性，随机性较大等
+
+## 核电
+
+龙头：中国核电
+
+核电占比 5% 左右
+
+优势：发电稳定
+
+劣势：安全约束，技术难度高，建设周期长，投资规模大，厂址选择受限等
+
+目前技术水平来看，还不具备大规模增长的条件。
