--- a/博客文章/股票文章/消费 可选消费.md
+++ b/博客文章/股票文章/消费 可选消费.md
@@ -1,4 +1,4 @@
-医药生物，大消费（白酒，免税），大科技（上游技术），新能源汽车
+**人均超过1万美元，消费往往迎来爆发升级期，这个阶段，消费者开始追求品质**
 
 ## 免税
 
@@ -22,7 +22,7 @@
 
 ## 白酒
 
-需求端：相对高频的消费需求，主要来自三方面：公务消费，商务消费，个人消费。目前个人消费占比接近70%。
+需求端：相对高频的消费需求，主要来自三方面：公务消费，商务消费，个人消费。目前个人消费占比接近70%。从整体的需求来看，白酒需求处于震荡下行中。虽然整体需求下降，但是中高端需求在不断升高，消费趋势明显。
 
 供给端：
 
@@ -30,13 +30,39 @@
 
 - 从商业模式来看，白酒龙头品牌的护城河比较深，能够形成稳定的盈利。最大的护城河就是产地以及由此产生的品牌文化，这种品牌文化让龙头品牌有很强的定价权，毛利率高到惊人。
 
-- 从行业格局来看，白酒行业已经过了野蛮竞争的成长期，进入龙头稳步提升的成熟期
+- 从行业格局来看，白酒行业已经过了野蛮竞争的成长期，进入龙头稳步提升的成熟期，未来将形成寡头垄断。
 
 风险点：
 
 - 白酒属于可选消费，有一定周期性，经济减速的过程中需求会受到冲击
 
 - 年轻人对于白酒的兴趣和忠诚度在下降，这几年白酒市场一直在萎缩
+
+总体来看，白酒需要投资高端白酒，而不应该投资其他杂毛。
+
+## 啤酒
+
+需求端：属于相对高频的强需求。
+
+供给端：作为一个大众消费品，品牌效应明显，有能力打造护城河
+
+2013年后，啤酒总量进入萎缩阶段。
+
+一方面是总量收缩初期更加激烈的价格战，行业集中度较海外成熟市场还有差距；另一方面是高端啤酒市场还不成熟，高端化的第二增长曲线没有走出来。
+
+2018年后，随着高端市场的逐渐成熟以及行业集中度的持续提高，啤酒行业才彻底开启了高端化的第二增长曲线。
+
+啤酒行业的行业趋势由两个因素决定：
+
+- 宏观的消费升级能否继续
+
+- 微观的产业集中和升级能否继续
+
+从行业集中度看，虽然目前集中度已经较高，但相比发达国家的成熟市场还有提升空间
+
+从产品结构看，虽然高端化产品已经出现了爆发，但不管从产品价格还是企业盈利的角度看，相比成熟市场都有进一步结构升级的空间。
+
+啤酒行业虽然规模不大，但从未来成长性来看，是一个可以与白酒相媲美的消费赛道。
 
 ## 家电
 
@@ -82,14 +108,4 @@
 
 - 冲动消费能否持续
 
-## 汽车行业
-
-中国是全球规模最大的汽车市场
-
-中国也是全球最开放的汽车市场
-
-传统的汽车行业指的是燃油车，而近几年快速崛起的新能源车更像是一个新兴的科技行业
-
-新能源汽车属于绝对的成长型赛道，而传统汽车行业已经是一个相当成熟的赛道
-
-需求端总量下滑，供给端的竞争格局不清晰，这就是目前中国汽车行业的现状
+## 旅游酒店
