--- a/博客文章/股票文章/理解牛市.md
+++ b/博客文章/股票文章/理解牛市.md
@@ -12,7 +12,7 @@
 
 ## 走牛的四个阶段
 
-### 第一阶段： 牛市的最后一跌
+### 第一阶段： 牛市的最后一跌 - 经济衰退
 
 基本面特征：
 
@@ -30,7 +30,7 @@
 
 熊市后期适合定投可选消费和主赛道，等待第二阶段。这一阶段的主体是埋伏。
 
-### 第二阶段: 牛市初期反弹
+### 第二阶段: 牛市初期反弹 - 衰退到复苏
 
 核心逻辑：经济从衰退走向复苏，进而带动市场企稳反弹。
 
@@ -44,9 +44,9 @@
 
 典型的：2018年底-2019年初
 
-此时，一般来讲，这个阶段消费和成长相对占优。2022年5月，最强的是光伏新能源，可选消费次之。
+此时，一般来讲，这个阶段消费和成长相对占优。2022年5月，最强的是光伏新能源芯片，可选消费次之。
 
-### 第三阶段：牛市结构修整
+### 第三阶段：牛市结构修整 - 复苏
 
 基本面特征：
 
@@ -58,7 +58,7 @@
 
 此时，消费在这个阶段会有超额收益。成长在前期市场回调时不如消费稳，后期向主升浪过渡时比消费弹性大。
 
-### 第四阶段： 牛市主升浪阶段
+### 第四阶段： 牛市主升浪阶段  - 过热
 
  核心原因：基本面的金融，经济，企业盈利周期同步扩张共振，对市场形成有力的支撑。
 
@@ -72,7 +72,7 @@
 
 该阶段，消费和周期商品表现最佳，成长板块需要看行业景气度。
 
-## 第五阶段： 牛市后期
+## 第五阶段： 牛市后期 - 过热到滞涨
 
 这一阶段，主要投资方向在金融，周期和消费龙头。这一阶段，以下几个板块不要碰：
 
@@ -94,7 +94,7 @@
 
 - 等到通胀和利率飙到高位，陷入真正的滞涨后，熊市会来，再核心的茅也难以幸免
 
-- 
+
 
 ## Reference
 
