--- a/博客文章/读书感悟/如何阅读一本书.md
+++ b/博客文章/读书感悟/如何阅读一本书.md
@@ -1,8 +1,22 @@
-# 书评 | 读书，不仅仅是读而已
+# 成为一个读书人
 
 
 
-## 一本好书，读几遍？
+
+
+阅读可以是一件多少主动的事情， 阅读越主动，效果越好。
+
+
+
+阅读的艺术：一个凭借着头脑运作，除了玩味读物中的一些字句之外，不假任何外助，以一己之力来提升自我的过程。
+
+为获得资讯而阅读，与为增进理解而阅读，其间的差异不能以道里计。
+
+为了增进理解而阅读的两种状况：
+
+- 一开始不相等的理解程度
+
+- 阅读的人的一定要把不相等的理解力克服到一定程度内
 
 
 
